Updated dropdowns in gecko nav to display at center to avoid overflow of Sprint 5 dropdown

--- a/css/gecko.css
+++ b/css/gecko.css
@@ -48,3 +48,8 @@ a {
 .list-group {
     --bs-list-group-border-color: var(--gecko-accent-color);
 }
+
+.dropdown-center > .dropdown-menu.show {
+    transform: translateX(2.5vw);
+    margin-left: calc(-75px - 12px) !important; 
+}
